# Cloud-Applied-Genrative-Ai

01_class_poetry/project_class1/: pyproject.toml
01_class_poetry/project_class1/project_class1/: main.py
02_class_fastapi/fastapi_helloworld/: README.md
02_class_fastapi/fastapi_helloworld/tests/: test_main.py
03_class_containerization/helloworld/: Dockerfile
04_class_dev_container/dev_containers/tests/: test_container.py
05_class_docker_compose/dock_compose/: README.md  pyproject.toml
06_class_compose_db/compose_db/: compose.yaml  pyproject.toml
06_class_compose_db/todo/: compose.yaml
06_class_compose_db/todo/todo/app/: main.py
microservices/01_docker/01_class_poetry/project_class1/: README.md
microservices/01_docker/01_class_poetry/project_class1/tests/: test_myproject.py
microservices/01_docker/02_class_fastapi/fastapi_helloworld/: pyproject.toml
microservices/01_docker/03_class_containerization/helloworld/: README.md  pyproject.toml
microservices/01_docker/03_class_containerization/helloworld/tests/: test_helloworld.py
microservices/01_docker/04_class_dev_container/dev_containers/: pyproject.toml
microservices/01_docker/04_class_dev_container/dev_containers/dev_containers/: main.py
microservices/01_docker/05_class_docker_compose/dock_compose/: Dockerfile  compose.yaml
microservices/01_docker/06_class_compose_db/compose_db/: Dockerfile
microservices/01_docker/06_class_compose_db/todo/todo/: compose.yaml
microservices/03_oauth2_auth/00_generate_access_token/.devcontainer/: devcontainer.json  docker-compose.yml
